public class Cloud implements EnvironmentBehaviour {
    public void initEnvironment() {
        System.out.println("The environment is high up in the blue sky and clouds are visible");
    }
}
