public class Dark implements EnvironmentBehaviour {
    public void initEnvironment() {
        System.out.println("The environment is poorly lit");
    }
}
