public interface EnvironmentBehaviour {

    void initEnvironment();

}
